--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/Adafruit MAX31865 library@^1.3.0
+lib_deps = 
+	adafruit/Adafruit MAX31865 library@^1.3.0
+	256dpi/MQTT@^2.5.0
 monitor_speed = 115200
