--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit MAX31865 library@^1.3.0
 	256dpi/MQTT@^2.5.0
+	adafruit/Adafruit ADS1X15@1.1.2
 monitor_speed = 115200
