--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	adafruit/Adafruit MAX31865 library@^1.3.0
 	256dpi/MQTT@^2.5.0
 	adafruit/Adafruit ADS1X15@1.1.2
+	bblanchon/ArduinoJson@^6.18.0
 monitor_speed = 115200
